This should fix #2 (Hide HTML elements by default)
Elements seem to be hidden at the beginning now. This avoids overlapping multiple languages

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,19 @@
 [lang=de] {
     display: none;
 }
+
 [lang=en] {
+    display: none;
+}
+
+#addDialog {
+    display: none;
+}
+
+#renameDialog {
+    display: none;
+}
+
+#deleteDialog {
     display: none;
 }
